hikey960/hikey_defconfig: enabled CONFIG_CRYPTO_SHA512
Original patch is by YongQin for 4.9 kernel:
https://android-review.googlesource.com/c/kernel/hikey-linaro/+/691901

This config is required by VtsKernelNetTest test as listed in source file here:
https://android.googlesource.com/kernel/tests/+/master/net/test/xfrm_algorithm_test.py#47

Otherwise we will see failures from VtsKernelNetTest test like following:

testSocketPolicySimple_cbc-aes_128_hmac-sha384_384_192_IPv4_TCP (xfrm_algorithm_test.XfrmAlgorithmTest) ... ERROR
testSocketPolicySimple_cbc-aes_128_hmac-sha384_384_192_IPv4_UDP (xfrm_algorithm_test.XfrmAlgorithmTest) ... ERROR
testSocketPolicySimple_cbc-aes_128_hmac-sha384_384_384_IPv6_TCP (xfrm_algorithm_test.XfrmAlgorithmTest) ... ERROR
testSocketPolicySimple_cbc-aes_128_hmac-sha384_384_384_IPv6_UDP (xfrm_algorithm_test.XfrmAlgorithmTest) ... ERROR

Test: manually run vts-kernel -m VtsKernelNetTest on hikey

Signed-off-by: Vishal Bhoj <vishal.bhoj@linaro.org>

Change-Id: Icff1ad7860f547f7e653b264f757120a08caca4e

--- a/arch/arm64/configs/hikey_defconfig
+++ b/arch/arm64/configs/hikey_defconfig
@@ -539,6 +539,7 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_SECURITY_SELINUX_DISABLE=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
+CONFIG_CRYPTO_SHA512=y
 CONFIG_CRYPTO_TWOFISH=y
 CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
